@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-04-30 DP  1.8.0  Allow detection and conversion of line ending format in
+                      the query tool.
 2007-04-24 DP  1.8.0  Integrate the EnterpriseDB pl/pgsql and EDB-SPL debugger
                       with pgAdmin [Hiroshi Saito, Dave Page]
 2007-04-23 DP  1.8.0  Don't try to detect if integrated autovacuum is
